Make headline full width to fix alignment

--- a/assets/scss/theme/_headline.scss
+++ b/assets/scss/theme/_headline.scss
@@ -13,8 +13,7 @@
     }
 
     &[class*="has-text-align"]{
-        margin-left: 0;
-        margin-right: 0;
+        width: 100%;
     }
 }
 
