--- a/editor.css
+++ b/editor.css
@@ -533,8 +533,7 @@
   .editor-styles-wrapper .c-headline.has-text-align-right {
     align-items: flex-end; }
   .editor-styles-wrapper .c-headline[class*="has-text-align"] {
-    margin-left: 0;
-    margin-right: 0; }
+    width: 100%; }
 
 .editor-styles-wrapper .c-headline__word {
   display: inline-flex !important; }
