--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3240,8 +3240,7 @@ body.archive, body.blog, body.search:not(.search-no-results) {
   .c-headline.has-text-align-right {
     align-items: flex-end; }
   .c-headline[class*="has-text-align"] {
-    margin-right: 0;
-    margin-left: 0; }
+    width: 100%; }
 
 .c-headline__word {
   display: inline-flex !important; }
